@startuml

title __SRC's Class Diagram__\n

namespace   {
    class Individual {
        - bankAcct : String
        - dob : String
        {static} - type : String
        - userType : String
        + Individual()
        + getBankAcct()
        + getDob()
        + toString()
    }
  }
  

  namespace  {
    class MenuNav {
        + MenuNav()
        + actAsEvent()
        + actAsIndividual()
        + actAsOrganization()
        + createMenu()
        + mainMenu()
    }
  }
  

  namespace  {
    class Organization {
        - bankAcct : String
        - mailing : String
        - phone : String
        - tax : String
        + Organization()
        + getBankAcct()
        + getMailing()
        + getPhone()
        + getTax()
        + toString()
    }
  }
  

  namespace  {
    class Post {
        - file : String
        - message : String
        + Post()
        + getFile()
        + getMessage()
        + setFile()
        + setMessage()
        + toString()
    }
  }
  

  namespace  {
    class Tester {
        {static} + createIndividual()
        {static} + createOrganization()
        {static} + createVolunteerPage()
        {static} + main()
    }
  }
  

  namespace  {
    class User {
        - bio : String
        - email : String
        - id : int
        {static} - idGenerator : int
        - name : String
        - password : String
        - userType : String
        - username : String
        + User()
        + getBio()
        + getEmail()
        + getId()
        + getName()
        + getPassword()
        + getUserType()
        + getUsername()
        + toString()
    }
  }
  

  namespace  {
    class VolunteerPage {
        - address : String
        - contact : String
        - date : String
        - time : String
        + VolunteerPage()
        + getAddress()
        + getContact()
        + getDate()
        + getTime()
        + toString()
    }
  }
  

  Individual -up-|> User
  Organization -up-|> User
  VolunteerPage -up-|> User


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
